--- a/pages/ShortlistNewDiagonal.html
+++ b/pages/ShortlistNewDiagonal.html
@@ -36,10 +36,10 @@
         padding-left: 1px;
         padding-right: 30px;
         position: relative;
-        margin-left: auto;
-        margin-right: auto;
-
+         margin: auto;
         line-height: 1;
+        display: inline-flex;
+        flex-direction: column;
       }
       .main > h1 {
         margin-left: 20px;
@@ -176,6 +176,7 @@
 
       .category-holder {
         overflow-x: scroll;
+        display: inline-block;
       }
 
       .jumpbar a {
